first attempt at pricing cards. janky alignment to fix. need to check dark mode icon changes.

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -104,3 +104,13 @@
         margin-right: 75px;
     }
 }
+
+@media screen and (max-width:970px) {
+    .content{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin: 50px auto;
+    }
+    /* additional cards */
+}
